# Zenfa-AI

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
tests/: test_api.py  test_cache.py  test_compatibility.py  test_evaluator.py  test_grounding.py  test_knapsack.py  test_loop.py
zenfa_ai/: __init__.py
zenfa_ai/api/: app.py  auth.py  internal.py  middleware.py  vendor.py
zenfa_ai/cache/: __init__.py  redis_cache.py
zenfa_ai/engine/: __init__.py  compatibility.py  knapsack.py  weights.py
zenfa_ai/evaluator/: __init__.py  llm_client.py  prompts.py  schemas.py
zenfa_ai/models/: __init__.py  build.py  components.py
zenfa_ai/orchestrator/: __init__.py  decisions.py  loop.py  state.py
